--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
-
+<p>I am normal</p>
+<p style="color:red;">I am red</p>
+<p style="color:blue;">I am blue</p>
+<p style="font-size:50px;">I am big</p>
+  
 </body>
 </html>
